Melhora o config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 title: <strong>Noite de Processing @ Recife</strong>
 
-site_name: noite_processing_recife
+site_name: Noite de Processing @ Recife
 
 # Name of your blog (this will show up at the top of your page and in the RSS feed)
-name: noite_processing_recife
+name: Noite de Processing @ Recife
 
 # Short description (goes below the title; it will also be used in the RSS feed)
 # description: arte e programação
 
 # Your name, as you want it to appear underneath each post and in the footer
-author: noite_processing_recife
+# author:
 
 # Your email if you want it to be linked on the contact page
 # author_email:
